--- a/OldTwitterSafariExtension/Resources/layouts/tweet/style.css
+++ b/OldTwitterSafariExtension/Resources/layouts/tweet/style.css
@@ -617,14 +617,17 @@ a:hover,
 #new-tweet-text {
     border: 1px solid var(--border);
     border-radius: 3px;
+    box-sizing: border-box;
     display: inline-block;
     font: 18px var(--font-override);
-    height: 23px;
+    height: 35px;
+    overflow-y: hidden;
     padding: 5px;
     padding-right: 40px;
     resize: none;
     scrollbar-width: thin;
-    width: 480px
+    vertical-align: top;
+    width: calc(100% - 50px)
 }
 
 #new-tweet-text::-webkit-scrollbar {
@@ -636,7 +639,8 @@ a:hover,
 }
 
 .new-tweet-text-focused {
-    height: 100px !important
+    height: 100px !important;
+    overflow-y: auto !important
 }
 
 #new-tweet {
